Enhance map functionality and visual representation in cultural mapping application
- Updated `index.html` to set the map div height to 100% for better display.
- Modified `map.js` to integrate CartoDB tiles for improved map aesthetics.
- Introduced color coding for categories, activities, and target audiences to enhance visual clarity.
- Implemented a new function to add markers and circles dynamically based on cultural data, allowing for interactive map features.
- Added click handlers to institution list items for focused map navigation and circle highlighting.

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                 </div>
             </div>
         </div>
-        <div id="map"></div>
+        <div id="map" style="height: 100%;"></div>
     </div>
 
     <!-- Scripts -->
