Implement cache-busting for map.js in index.html
- Added a function to append a timestamp to the map.js script URL to prevent caching issues.
- Updated the script inclusion method for map.js to utilize the new cache-busting function.

--- a/index.html
+++ b/index.html
@@ -308,7 +308,15 @@
 
     <!-- Scripts -->
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    <script>
+        // Add timestamp to prevent caching
+        function addTimestamp(url) {
+            return `${url}?v=${new Date().getTime()}`;
+        }
+    </script>
     <script src="data.js"></script>
-    <script src="map.js"></script>
+    <script>
+        document.write(`<script src="${addTimestamp('map.js')}"><\/script>`);
+    </script>
 </body>
 </html>
