Update color scheme for legend items and improve visual consistency in cultural mapping application
- Modified color codes for various categories, activities, and audiences in both `index.html` and `map.js` to enhance visual representation and consistency.
- Adjusted background colors for legend items to align with the updated color scheme, ensuring a cohesive user experience across the application.

--- a/index.html
+++ b/index.html
@@ -572,42 +572,42 @@
                     <div class="legend-items">
                         <div class="legend-item">
                             <input type="checkbox" id="types-ספריה" checked>
-                            <span class="color-box" style="background-color: #2196F3"></span>
+                            <span class="color-box" style="background-color: #1E88E5"></span>
                             <label for="types-ספריה">ספריה</label>
                         </div>
                         <div class="legend-item">
                             <input type="checkbox" id="types-אתר מורשת תרבותית" checked>
-                            <span class="color-box" style="background-color: #4CAF50"></span>
+                            <span class="color-box" style="background-color: #43A047"></span>
                             <label for="types-אתר מורשת תרבותית">אתר מורשת תרבותית</label>
                         </div>
                         <div class="legend-item">
                             <input type="checkbox" id="types-מוסד תרבות (כללי)" checked>
-                            <span class="color-box" style="background-color: #9C27B0"></span>
+                            <span class="color-box" style="background-color: #8E24AA"></span>
                             <label for="types-מוסד תרבות (כללי)">מוסד תרבות (כללי)</label>
                         </div>
                         <div class="legend-item">
                             <input type="checkbox" id="types-אולם מופעים" checked>
-                            <span class="color-box" style="background-color: #FF9800"></span>
+                            <span class="color-box" style="background-color: #FB8C00"></span>
                             <label for="types-אולם מופעים">אולם מופעים</label>
                         </div>
                         <div class="legend-item">
                             <input type="checkbox" id="types-מוזיאון" checked>
-                            <span class="color-box" style="background-color: #F44336"></span>
+                            <span class="color-box" style="background-color: #E53935"></span>
                             <label for="types-מוזיאון">מוזיאון</label>
                         </div>
                         <div class="legend-item">
                             <input type="checkbox" id="types-מרכזים קהילתיים (מתנ&quot;ס)" checked>
-                            <span class="color-box" style="background-color: #795548"></span>
+                            <span class="color-box" style="background-color: #6D4C41"></span>
                             <label for="types-מרכזים קהילתיים (מתנ&quot;ס)">מרכזים קהילתיים (מתנ"ס)</label>
                         </div>
                         <div class="legend-item">
                             <input type="checkbox" id="types-גלריה" checked>
-                            <span class="color-box" style="background-color: #009688"></span>
+                            <span class="color-box" style="background-color: #00897B"></span>
                             <label for="types-גלריה">גלריה</label>
                         </div>
                         <div class="legend-item">
                             <input type="checkbox" id="types-אומנות וקהילה" checked>
-                            <span class="color-box" style="background-color: #607D8B"></span>
+                            <span class="color-box" style="background-color: #546E7A"></span>
                             <label for="types-אומנות וקהילה">אומנות וקהילה</label>
                         </div>
                     </div>
@@ -618,42 +618,42 @@
                     <div class="legend-items">
                         <div class="legend-item">
                             <input type="checkbox" id="activities-מופעים" checked>
-                            <span class="color-box" style="background-color: #E91E63"></span>
+                            <span class="color-box" style="background-color: #D81B60"></span>
                             <label for="activities-מופעים">מופעים</label>
                         </div>
                         <div class="legend-item">
                             <input type="checkbox" id="activities-נותן שירותים" checked>
-                            <span class="color-box" style="background-color: #00BCD4"></span>
+                            <span class="color-box" style="background-color: #039BE5"></span>
                             <label for="activities-נותן שירותים">נותן שירותים</label>
                         </div>
                         <div class="legend-item">
                             <input type="checkbox" id="activities-ערבי תרבות" checked>
-                            <span class="color-box" style="background-color: #FFC107"></span>
+                            <span class="color-box" style="background-color: #FDD835"></span>
                             <label for="activities-ערבי תרבות">ערבי תרבות</label>
                         </div>
                         <div class="legend-item">
                             <input type="checkbox" id="activities-סדנאות" checked>
-                            <span class="color-box" style="background-color: #795548"></span>
+                            <span class="color-box" style="background-color: #8D6E63"></span>
                             <label for="activities-סדנאות">סדנאות</label>
                         </div>
                         <div class="legend-item">
                             <input type="checkbox" id="activities-חוגים" checked>
-                            <span class="color-box" style="background-color: #607D8B"></span>
+                            <span class="color-box" style="background-color: #546E7A"></span>
                             <label for="activities-חוגים">חוגים</label>
                         </div>
                         <div class="legend-item">
                             <input type="checkbox" id="activities-תערוכות" checked>
-                            <span class="color-box" style="background-color: #8BC34A"></span>
+                            <span class="color-box" style="background-color: #7CB342"></span>
                             <label for="activities-תערוכות">תערוכות</label>
                         </div>
                         <div class="legend-item">
                             <input type="checkbox" id="activities-ליווי אמנים ויוצרים מקצועיים" checked>
-                            <span class="color-box" style="background-color: #FF5722"></span>
+                            <span class="color-box" style="background-color: #F4511E"></span>
                             <label for="activities-ליווי אמנים ויוצרים מקצועיים">ליווי אמנים ויוצרים מקצועיים</label>
                         </div>
                         <div class="legend-item">
                             <input type="checkbox" id="activities-תוכניות הכשרה ולימודים" checked>
-                            <span class="color-box" style="background-color: #3F51B5"></span>
+                            <span class="color-box" style="background-color: #3949AB"></span>
                             <label for="activities-תוכניות הכשרה ולימודים">תוכניות הכשרה ולימודים</label>
                         </div>
                     </div>
@@ -664,23 +664,23 @@
                     <div class="legend-items">
                         <div class="legend-item">
                             <input type="checkbox" id="audiences-ילדים 5-12" checked>
-                            <span class="color-box" style="background-color: #3F51B5"></span>
+                            <span class="color-box" style="background-color: #3949AB"></span>
                             <label for="audiences-ילדים 5-12">ילדים 5-12</label>
                         </div>
                         <div class="legend-item">
                             <input type="checkbox" id="audiences-נוער 12-18" checked>
-                            <span class="color-box" style="background-color: #009688"></span>
+                            <span class="color-box" style="background-color: #00897B"></span>
                             <label for="audiences-נוער 12-18">נוער 12-18</label>
                         </div>
                         <div class="legend-item">
                             <input type="checkbox" id="audiences-young adults 18-30" checked>
-                            <span class="color-box" style="background-color: #FF5722"></span>
+                            <span class="color-box" style="background-color: #F4511E"></span>
                             <label for="audiences-young adults 18-30">צעירים 18-30</label>
                         </div>
                         <div class="legend-item">
                             <input type="checkbox" id="audiences-משפחות צעירות 30+" checked>
                             <span class="color-box" style="background-color: #9E9E9E"></span>
-                            <label for="audiences-משפחות צעירות 30+">שפחות צעירות 30+</label>
+                            <label for="audiences-משפחות צעירות 30+">משפחות צעירות 30+</label>
                         </div>
                         <div class="legend-item">
                             <input type="checkbox" id="audiences-גיל שלישי 60+" checked>
@@ -689,7 +689,7 @@
                         </div>
                         <div class="legend-item">
                             <input type="checkbox" id="audiences-קהל רחב" checked>
-                            <span class="color-box" style="background-color: #673AB7"></span>
+                            <span class="color-box" style="background-color: #5E35B1"></span>
                             <label for="audiences-קהל רחב">קהל רחב</label>
                         </div>
                     </div>
